# waypoint_nav_plugin

./: README.md
pose_get_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
pose_get_plugin/include/pose_get_plugin/: goal_tool.h  marker_manager.h  waypoint_saver.h
pose_get_plugin/launch/: nav.launch  nav_into_real.launch  waypoint_making.launch
pose_get_plugin/rviz/: pose_get_plugin.rviz
pose_get_plugin/src/: goal_tool.cpp  marker_manager.cpp  multi_waypoint_nav.cpp  waypoint_saver.cpp
